--- a/server/.env.example
+++ b/server/.env.example
@@ -4,3 +4,17 @@ MONGO_URI=mongodb://localhost:27017/dasho
 JWT_SECRET=supersecret_change_me
 JWT_EXPIRES_IN=7d
 NODE_ENV=development
+
+# Email (Brevo SMTP)
+FROM_EMAIL=
+FROM_NAME=
+BREVO_SMTP_HOST=smtp-relay.brevo.com
+BREVO_SMTP_PORT=587
+BREVO_SMTP_USER=
+BREVO_SMTP_PASS=
+
+# Admin dashboard stats window (optional)
+# Number of days to compute utilization across
+UTILIZATION_DAYS=7
+# Number of operational minutes per day across the lab (e.g., 12 hours = 720 minutes)
+OPERATIONAL_MINUTES_PER_DAY=720
