--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+  "nodemailer": "^6.9.14",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
